--- a/index.html
+++ b/index.html
@@ -1,15 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www.worldtravel.com</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="Images/Travels-Logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="Styles/responsive.css">
     <link rel="stylesheet" href="Styles/travel.css">
 
 </head>
+
 <body>
-    
+    <!-- Header Section Starts Here -->
+    <header class="header-section">
+        <nav>
+            <ul class="nav-bar">
+                <div class="logo-content">
+
+                    <li class="logo"><a href="#"><img src="Images/Travels-Logo.png" alt="Logo"></a></li>
+                    <h2>World <span class="travel">Travel</span></h2>
+                </div>
+                <input type="checkbox" id="check">
+                <span class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Packages</a></li>
+                    <li><a href="#">Testimonial</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <label for="check" class="close-menu"> <i class="fas fa-times"></i></label>
+                </span>
+                <label for="check" class="open-menu"> <i class="fas fa-bars"></i></label>
+            </ul>
+        </nav>
+    </header>
+    <!-- Header Section Ends Here -->
+
+    <!-- Main Section Starts Here -->
+    <main>
+        <section class="banner-section">
+
+            <div class="banner-content">
+                <h2 class="banner-title">Explore Your Travel</h2>
+                <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+                    adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+
+                <div class="form">
+                    <input type="text" placeholder="Where Go">
+                    <input type="text" placeholder="When Go">
+                    <input type="text" placeholder="Select Type">
+                    <input class="" type="submit" value="Find Now">
+
+                    <!-- <button class="btn-primary">Find Now</button> -->
+                </div>
+            </div>
+        </section>
+
+
+
+        <section>
+
+
+            
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+    <!-- Main Section Ends Here -->
+
+    <!-- Footer Section starts Here -->
+    <footer>
+
+
+
+
+
+    </footer>
+    <!-- Footer Section Ends Here -->
 </body>
+
 </html>
