--- a/index.html
+++ b/index.html
@@ -61,10 +61,33 @@
 
 
 
-        <section>
+        <section class="popular-section">
+            <div class="popular-text-content">
+                <h2 class="section-title">Our Popular Tours</h2>
+                <p class="popular-text-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+                    odio sit massa. Sodales dictumst
+                    nec nibh pellentesque.</p>
+                    <div>
+                        <ul class="popular-tours-list">
+                            <li>Lcus mauris . Magna nullam odio neque diam. Sociis erat at .</li>
+                            <li>Tempus euismod lacus mauris dignissim quisiis
+                                erat at .</li>
+                            <li>Mpus euismod gna nullam odio neque diam. Sociis eratat .</li>
+                            <li>Euismod lacus mauris dignissim quis inat </li>
+                            <li>Tempus euismod lacus mauris dignissidiam. Sociis at .</li>
+                        </ul>
+                    </div>
+                <p class="popular-text-description">Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <button class="btn-primary  ">Read More</button>
+            </div>
+
+            <div class="popular-img-content">
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
 
 
-            
         </section>
 
 
