Added The Footer Section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <!-- Main Section Starts Here -->
     <main>
+        <!-- Banner Section Starts Here -->
         <section class="banner-section">
-
             <div class="banner-content">
                 <h2 class="banner-title">Explore Your Travel</h2>
                 <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
@@ -58,25 +58,25 @@
                 </div>
             </div>
         </section>
+        <!--Banner Section Ends Here -->
 
-
-
+        <!-- Popular Tours Section Starts Here -->
         <section class="popular-section">
             <div class="popular-text-content">
                 <h2 class="section-title">Our Popular Tours</h2>
                 <p class="popular-text-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
                     odio sit massa. Sodales dictumst
                     nec nibh pellentesque.</p>
-                    <div>
-                        <ul class="popular-tours-list">
-                            <li>Lcus mauris . Magna nullam odio neque diam. Sociis erat at .</li>
-                            <li>Tempus euismod lacus mauris dignissim quisiis
-                                erat at .</li>
-                            <li>Mpus euismod gna nullam odio neque diam. Sociis eratat .</li>
-                            <li>Euismod lacus mauris dignissim quis inat </li>
-                            <li>Tempus euismod lacus mauris dignissidiam. Sociis at .</li>
-                        </ul>
-                    </div>
+                <div>
+                    <ul class="popular-tours-list">
+                        <li>Lcus mauris . Magna nullam odio neque diam. Sociis erat at .</li>
+                        <li>Tempus euismod lacus mauris dignissim quisiis
+                            erat at .</li>
+                        <li>Mpus euismod gna nullam odio neque diam. Sociis eratat .</li>
+                        <li>Euismod lacus mauris dignissim quis inat </li>
+                        <li>Tempus euismod lacus mauris dignissidiam. Sociis at .</li>
+                    </ul>
+                </div>
                 <p class="popular-text-description">Amet consectetur. Vulputate commodo felis molestie risus
                     ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
                     natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
@@ -86,78 +86,95 @@
             <div class="popular-img-content">
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
-
-
         </section>
+        <!-- Popular Tours Section Starts Here -->
+
+
+        <!-- Choose Section Starts Here -->
+        <section class="choose-section">
+            <div class="choose-section-title">
+                <h3 class="section-title">Why Choose Us</h3>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec nibh pellentesque.</p>
+            </div>
+
+            <div class="choose-content-first">
+                <div class="choose-content-one">
+                    <img class="icon-img" src="Images/hotel-icon.jpg" alt="">
+                    <h3 class="choose-section-title">World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose-content-two">
+                    <img class="icon-img" src="Images/location.jpg" alt="">
+                    <h3 class="choose-section-title">Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+
+                </div>
+            </div>
+
+            <div class="choose-content-second">
+                <img class="icon-img" src="Images/best-price.jpg" alt="">
+                <h3 class="choose-section-title">Best Price Guarantee</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </section>
+        <!-- Choose Section Ends Here -->
+
+
+        <!-- Newsletter Section starts Here -->
+        <section>
+            <div class="newsletter-section">
+
+
+                <div class="newsletter-form">
+                    <h3 class="newsletter-title">Newsletter</h3>
+                    <p class="newsletter-description">Get your daily dose of travel news & tips. Sign up today!</p>
+                    <input type="text" placeholder="Enter your name"> <br>
+                    <input type="email" placeholder="Enter your email"> <br>
+                    <button class="btn-primary  btn-newsletter">Subscribe</button>
+                </div>
+                <div class="newsletter-img">
+                    <img src="Images/Rectangle 8 (1).png" alt="">
+                </div>
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
+        </section>
+        <!-- Choose Section Ends Here -->
 
     </main>
     <!-- Main Section Ends Here -->
 
     <!-- Footer Section starts Here -->
     <footer>
+        <section class="footer-section">
 
+            <div class="footer-content-section">
+
+                <div class="footer-content">
+                    <img class="footer-img" src="Images/Travels-Logo.png" alt="Logo">
+                    <h2>World <span class="travel">Travel</span></h2>
+                </div>
+                <p class="footer-description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitaeblandit potenti vulputate. Leoerat maecenas vitae elementum ultricies nullam.
+                </p>
+                <div class="footer-icons">
+                    <span><i class="fa-brands fa-twitter"></i></span>
+                    <span><i class="fa-brands fa-facebook"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                    <span><i class="fa-brands fa-github"></i></span>
+                </div>
+                <hr>
+                <p class="footer-text">2017, &copy; All Rights Reserved.</p>
+            </div>
+
+        </section>
 
 
 
