--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="Images/Travels-Logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/Travels-Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="Styles/responsive.css">
     <link rel="stylesheet" href="Styles/travel.css">
 
@@ -52,7 +52,7 @@
                     <input type="text" placeholder="Where Go">
                     <input type="text" placeholder="When Go">
                     <input type="text" placeholder="Select Type">
-                    <input class="" type="submit" value="Find Now">
+                    <input class="btn-primary" type="submit" value="Find Now">
 
                     <!-- <button class="btn-primary">Find Now</button> -->
                 </div>
@@ -87,8 +87,34 @@
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
         </section>
-        <!-- Popular Tours Section Starts Here -->
+        <!-- Popular Tours Section ends Here -->
 
+        <!-- Destination Section Starts Here -->
+
+        <section class="destination-section">
+            <div class="destination-text-content">
+                <h2 class="section-title">Choose Your Destination</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec nibh pellentesque.</p>
+            </div>
+            <div class="destination-img-container-1">
+                <img class="img-1" src="Images/Rectangle 5.png" alt="">
+                <img class="img-2" src="Images/Rectangle 8.png" alt="">
+            </div>
+
+            <div class="destination-img-container-2">
+                <img class="img-3" src="Images/Rectangle 6.png" alt="">
+                <img class="img-4" src="Images/Rectangle 7.png" alt="">
+                <img class="img-5" src="Images/Rectangle 9.png" alt="">
+            </div>
+            <div class="destination-img-container-3">
+                <img class="img-6" src="Images/Rectangle 11.png" alt="">
+                <img class="img-7" src="Images/Rectangle 10.png" alt="">
+            </div>
+
+        </section>
+
+        <!-- Destination Section Ends Here -->
 
         <!-- Choose Section Starts Here -->
         <section class="choose-section">
@@ -137,17 +163,12 @@
                     <button class="btn-primary  btn-newsletter">Subscribe</button>
                 </div>
                 <div class="newsletter-img">
-                    <img src="Images/Rectangle 8 (1).png" alt="">
+                    <img class="newsletter-image" src="Images/Rectangle 8 (1).png" alt="">
                 </div>
-
-
-
-
-
 
             </div>
         </section>
-        <!-- Choose Section Ends Here -->
+        <!-- Newsletter Section Ends Here -->
 
     </main>
     <!-- Main Section Ends Here -->
@@ -162,7 +183,8 @@
                     <img class="footer-img" src="Images/Travels-Logo.png" alt="Logo">
                     <h2>World <span class="travel">Travel</span></h2>
                 </div>
-                <p class="footer-description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitaeblandit potenti vulputate. Leoerat maecenas vitae elementum ultricies nullam.
+                <p class="footer-description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi
+                    vitaeblandit potenti vulputate. Leoerat maecenas vitae elementum ultricies nullam.
                 </p>
                 <div class="footer-icons">
                     <span><i class="fa-brands fa-twitter"></i></span>
@@ -175,6 +197,8 @@
             </div>
 
         </section>
+
+
 
 
 
