Added More CSS Styles

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     <input type="text" placeholder="Where Go">
                     <input type="text" placeholder="When Go">
                     <input type="text" placeholder="Select Type">
-                    <input class="btn-primary" type="submit" value="Find Now">
-
-                    <!-- <button class="btn-primary">Find Now</button> -->
+                    <input class="button" type="submit" value="Find Now">
                 </div>
             </div>
         </section>
@@ -160,10 +158,14 @@
                     <p class="newsletter-description">Get your daily dose of travel news & tips. Sign up today!</p>
                     <input type="text" placeholder="Enter your name"> <br>
                     <input type="email" placeholder="Enter your email"> <br>
-                    <button class="btn-primary  btn-newsletter">Subscribe</button>
+                    <button class="btn-primary btn-newsletter">Subscribe</button>
                 </div>
                 <div class="newsletter-img">
                     <img class="newsletter-image" src="Images/Rectangle 8 (1).png" alt="">
+                    <div class="discount">
+                        <p>World Travel.com</p>
+                        <h3 class="">Save up to 70%</h3>
+                       </div>
                 </div>
 
             </div>
