Added Travel Relevant Text

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <section class="banner-section">
             <div class="banner-content">
                 <h2 class="banner-title">Explore Your Travel</h2>
-                <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-                    adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+                <p class="banner-description">Escape to the magic of Swedish Lapland for an unforgettable Arctic weekend, complete with accommodation, local cuisine, snowmobile tours, and enchanting Northern Lights experiences.</p>
 
                 <div class="form">
                     <input type="text" placeholder="Where Go">
@@ -62,22 +61,17 @@
         <section class="popular-section">
             <div class="popular-text-content">
                 <h2 class="section-title">Our Popular Tours</h2>
-                <p class="popular-text-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-                    odio sit massa. Sodales dictumst
-                    nec nibh pellentesque.</p>
+                <p class="popular-text-description">Niehku Mountain Villa is located in the Riksgränsen ski resort, just over 200 km north of the Arctic Circle. Up here in the north-westernmost reaches of Sweden, the landscape is wild, wondrous, and ever-changing.</p>
                 <div>
                     <ul class="popular-tours-list">
-                        <li>Lcus mauris . Magna nullam odio neque diam. Sociis erat at .</li>
-                        <li>Tempus euismod lacus mauris dignissim quisiis
-                            erat at .</li>
-                        <li>Mpus euismod gna nullam odio neque diam. Sociis eratat .</li>
-                        <li>Euismod lacus mauris dignissim quis inat </li>
-                        <li>Tempus euismod lacus mauris dignissidiam. Sociis at .</li>
+                        <li>The “Malmbanan” railway runs straight past Niehku, tracing the border between Sweden and Norway.</li>
+                        <li>This legendary train line between Kiruna and Narvik has been transporting iron ore for over a century.</li>
+                        <li>Niehku Mountain Villa is built on the site of the line’s old roundhouse, which operated from 1902 to 1923. </li>
+                        <li>The next afternoon, you could be taking in sweeping views of Norway’s breathtaking fjords.</li>
+                        <li>With the assistance from a helicopter we will take you to remote and seldom visited places.</li>
                     </ul>
                 </div>
-                <p class="popular-text-description">Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                    natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <p class="popular-text-description">We are less than an hour’s drive or train journey from a variety of mountains and peaks, many of which soar from near sea level to an altitude of as much as 1,000 to 1,300 metres. The weather can vary greatly between the mountains and the fjords, and here the flexibility of our tours offers yet another unique advantage: We can choose where to go based on where the conditions are best, from the mountains to the fjords. </p>
                 <button class="btn-primary  ">Read More</button>
             </div>
 
@@ -92,8 +86,7 @@
         <section class="destination-section">
             <div class="destination-text-content">
                 <h2 class="section-title">Choose Your Destination</h2>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
-                    nec nibh pellentesque.</p>
+                <p>With the assistance from a helicopter we will take you to remote and seldom visited places. With light backbacks we hike straight into the mountains, far away from the beaten path.</p>
             </div>
             <div class="destination-img-container-1">
                 <img class="img-1" src="Images/Rectangle 5.png" alt="">
@@ -118,8 +111,7 @@
         <section class="choose-section">
             <div class="choose-section-title">
                 <h3 class="section-title">Why Choose Us</h3>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
-                    nec nibh pellentesque.</p>
+                <p class="choose-description">South of Niehku Mountain Villa is Kebnekaise, Sweden’s highest peak, which rises some 2,100 metres above sea level.The average vertical drop is between 500 and 900 metres, but the longest runs we can choose from offers up to 1450 metres..</p>
             </div>
 
             <div class="choose-content-first">
