Added Travel Relevant Text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li>With the assistance from a helicopter we will take you to remote and seldom visited places.</li>
                     </ul>
                 </div>
-                <p class="popular-text-description">We are less than an hour’s drive or train journey from a variety of mountains and peaks, many of which soar from near sea level to an altitude of as much as 1,000 to 1,300 metres. The weather can vary greatly between the mountains and the fjords, and here the flexibility of our tours offers yet another unique advantage: We can choose where to go based on where the conditions are best, from the mountains to the fjords. </p>
+                <p class="popular-text-description">We are less than an hour’s drive or train journey from a variety of mountains and peaks, many of which soar from near sea level to an altitude of as much as 1,000 to 1,300 metres. </p>
                 <button class="btn-primary  ">Read More</button>
             </div>
 
@@ -118,14 +118,12 @@
                 <div class="choose-content-one">
                     <img class="icon-img" src="Images/hotel-icon.jpg" alt="">
                     <h3 class="choose-section-title">World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Mountain Villa is located in the Riksgränsen ski resort, just over 200 km north of the Arctic Circle. Up here in the north-westernmost reaches of Sweden, the landscape is wild, wondrous, and ever-changing. Join us for unique adventures in the great outdoors. </p>
                 </div>
                 <div class="choose-content-two">
                     <img class="icon-img" src="Images/location.jpg" alt="">
                     <h3 class="choose-section-title">Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>The dining room, is Niehku’s beating heart, serving substantial yet sophisticated fare paired with wonderful wines to hungry skiers and adventurers. The menu is rooted in a local, farm-to-table approach and changes with the seasons. Take a seat and head off on your next adventure.</p>
 
                 </div>
             </div>
@@ -133,8 +131,7 @@
             <div class="choose-content-second">
                 <img class="icon-img" src="Images/best-price.jpg" alt="">
                 <h3 class="choose-section-title">Best Price Guarantee</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                    sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                <p>The “Malmbanan” railway runs straight past Niehku, tracing the border between Sweden and Norway. This legendary train line between Kiruna and Narvik has been transporting iron ore for over a century. Niehku Mountain Villa is built on the site of the line’s old roundhouse, which operated from 1902 to 1923.</p>
             </div>
         </section>
         <!-- Choose Section Ends Here -->
@@ -147,7 +144,7 @@
 
                 <div class="newsletter-form">
                     <h3 class="newsletter-title">Newsletter</h3>
-                    <p class="newsletter-description">Get your daily dose of travel news & tips. Sign up today!</p>
+                    <p class="newsletter-description">With the assistance from a helicopter we will take you to remote and seldom visited places. Sign up today!</p>
                     <input type="text" placeholder="Enter your name"> <br>
                     <input type="email" placeholder="Enter your email"> <br>
                     <button class="btn-primary btn-newsletter">Subscribe</button>
@@ -177,8 +174,7 @@
                     <img class="footer-img" src="Images/Travels-Logo.png" alt="Logo">
                     <h2>World <span class="travel">Travel</span></h2>
                 </div>
-                <p class="footer-description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi
-                    vitaeblandit potenti vulputate. Leoerat maecenas vitae elementum ultricies nullam.
+                <p class="footer-description">Would you like to know more about us and what we can offer in form of adventures and experiences? Book a stay or reserve a table? Here you will find all the details.
                 </p>
                 <div class="footer-icons">
                     <span><i class="fa-brands fa-twitter"></i></span>
