Added Travel Relevant Text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     <input type="text" placeholder="Where Go">
                     <input type="text" placeholder="When Go">
                     <input type="text" placeholder="Select Type">
-                    <input class="button" type="submit" value="Find Now">
+                    <!-- <input type="submit"   class="button"   value="Find Now"> -->
+                    <button class="btn-primary button ">Find Now</button>
                 </div>
             </div>
         </section>
