Added Hotel Service Section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <section class="banner-section">
             <div class="banner-content">
                 <h2 class="banner-title">Explore Your Travel</h2>
-                <p class="banner-description">Escape to the magic of Swedish Lapland for an unforgettable Arctic weekend, complete with accommodation, local cuisine, snowmobile tours, and enchanting Northern Lights experiences.</p>
+                <p class="banner-description">Escape to the magic of Swedish Lapland for an unforgettable Arctic
+                    weekend, complete with accommodation, local cuisine, snowmobile tours, and enchanting Northern
+                    Lights experiences.</p>
 
                 <div class="form">
                     <input type="text" placeholder="Where Go">
@@ -62,17 +64,26 @@
         <section class="popular-section">
             <div class="popular-text-content">
                 <h2 class="section-title">Our Popular Tours</h2>
-                <p class="popular-text-description">Niehku Mountain Villa is located in the Riksgränsen ski resort, just over 200 km north of the Arctic Circle. Up here in the north-westernmost reaches of Sweden, the landscape is wild, wondrous, and ever-changing.</p>
+                <p class="popular-text-description">Niehku Mountain Villa is located in the Riksgränsen ski resort, just
+                    over 200 km north of the Arctic Circle. Up here in the north-westernmost reaches of Sweden, the
+                    landscape is wild, wondrous, and ever-changing.</p>
                 <div>
                     <ul class="popular-tours-list">
-                        <li>The “Malmbanan” railway runs straight past Niehku, tracing the border between Sweden and Norway.</li>
-                        <li>This legendary train line between Kiruna and Narvik has been transporting iron ore for over a century.</li>
-                        <li>Niehku Mountain Villa is built on the site of the line’s old roundhouse, which operated from 1902 to 1923. </li>
-                        <li>The next afternoon, you could be taking in sweeping views of Norway’s breathtaking fjords.</li>
-                        <li>With the assistance from a helicopter we will take you to remote and seldom visited places.</li>
+                        <li>The “Malmbanan” railway runs straight past Niehku, tracing the border between Sweden and
+                            Norway.</li>
+                        <li>This legendary train line between Kiruna and Narvik has been transporting iron ore for over
+                            a century.</li>
+                        <li>Niehku Mountain Villa is built on the site of the line’s old roundhouse, which operated from
+                            1902 to 1923. </li>
+                        <li>The next afternoon, you could be taking in sweeping views of Norway’s breathtaking fjords.
+                        </li>
+                        <li>With the assistance from a helicopter we will take you to remote and seldom visited places.
+                        </li>
                     </ul>
                 </div>
-                <p class="popular-text-description">We are less than an hour’s drive or train journey from a variety of mountains and peaks, many of which soar from near sea level to an altitude of as much as 1,000 to 1,300 metres. </p>
+                <p class="popular-text-description">We are less than an hour’s drive or train journey from a variety of
+                    mountains and peaks, many of which soar from near sea level to an altitude of as much as 1,000 to
+                    1,300 metres. </p>
                 <button class="btn-primary  ">Read More</button>
             </div>
 
@@ -87,7 +98,8 @@
         <section class="destination-section">
             <div class="destination-text-content">
                 <h2 class="section-title">Choose Your Destination</h2>
-                <p>With the assistance from a helicopter we will take you to remote and seldom visited places. With light backbacks we hike straight into the mountains, far away from the beaten path.</p>
+                <p>With the assistance from a helicopter we will take you to remote and seldom visited places. With
+                    light backbacks we hike straight into the mountains, far away from the beaten path.</p>
             </div>
             <div class="destination-img-container-1">
                 <img class="img-1" src="Images/Rectangle 5.png" alt="">
@@ -108,23 +120,82 @@
 
         <!-- Destination Section Ends Here -->
 
+
+        <!-- Hotel Service Section starts here -->
+        <section class="hotel-service-section">
+            <div class="hotel-section-title">
+                <h3 class="section-title">Our Hotel Service </h3>
+                <p class="hotel-description">Our hotel texting service is an effective tool for sending hotel SMS
+                    promotions, communicating with guests, and more to give them the full VIP treatment.</p>
+            </div>
+            <div class="hotel-content">
+                <div class="hotel-content-one">
+                    <img class="hotel-img" src="Images/card-1.jpg" alt="">
+                    <h3 class="hotel-room-title">
+                        H11 Aparthotel 
+                    </h3>
+                    <p>Set in the centre of Kraków, H11 Aparthotel is a accommodation, which offers
+                        soundproof rooms. </p>
+                </div>
+                <div class="hotel-content-two">
+                    <img class="hotel-img" src="Images/card-2.jpg" alt="">
+                    <h3 class="hotel-room-title">Apartments Opens
+                    </h3>
+                    <p>Apartments provides accommodation within 700 metres of the centre of Kraków, with free
+                        WiFi. </p>
+
+                </div>
+                <div class="hotel-content-three">
+                    <img class="hotel-img" src="Images/card-3.jpg" alt="">
+                    <h3 class="hotel-room-title">The Bridge Suites</h3>
+                    <p>Set in Kraków, The Bridge Suites offers a restaurant and river views, 2.1 km from Schindler
+                        Factory Museum. </p>
+                </div>
+            </div>
+        </section>
+        <!-- Hotel Service Section ends here -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- Choose Section Starts Here -->
         <section class="choose-section">
             <div class="choose-section-title">
                 <h3 class="section-title">Why Choose Us</h3>
-                <p class="choose-description">South of Niehku Mountain Villa is Kebnekaise, Sweden’s highest peak, which rises some 2,100 metres above sea level.The average vertical drop is between 500 and 900 metres, but the longest runs we can choose from offers up to 1450 metres..</p>
+                <p class="choose-description">South of Niehku Mountain Villa is Kebnekaise, Sweden’s highest peak, which
+                    rises some 2,100 metres above sea level.The average vertical drop is between 500 and 900 metres.</p>
             </div>
 
             <div class="choose-content-first">
                 <div class="choose-content-one">
                     <img class="icon-img" src="Images/hotel-icon.jpg" alt="">
                     <h3 class="choose-section-title">World Class Service</h3>
-                    <p>Mountain Villa is located in the Riksgränsen ski resort, just over 200 km north of the Arctic Circle. Up here in the north-westernmost reaches of Sweden, the landscape is wild, wondrous, and ever-changing. Join us for unique adventures in the great outdoors. </p>
+                    <p>Mountain Villa is located in the Riksgränsen ski resort, just over 200 km north of the Arctic
+                        Circle. Up here in the north-westernmost reaches of Sweden, the landscape is wild, wondrous, and
+                        ever-changing. Join us for unique adventures in the great outdoors. </p>
                 </div>
                 <div class="choose-content-two">
                     <img class="icon-img" src="Images/location.jpg" alt="">
                     <h3 class="choose-section-title">Handpicked Hotels</h3>
-                    <p>The dining room, is Niehku’s beating heart, serving substantial yet sophisticated fare paired with wonderful wines to hungry skiers and adventurers. The menu is rooted in a local, farm-to-table approach and changes with the seasons. Take a seat and head off on your next adventure.</p>
+                    <p>The dining room, is Niehku’s beating heart, serving substantial yet sophisticated fare paired
+                        with wonderful wines to hungry skiers and adventurers. The menu is rooted in a local,
+                        farm-to-table approach and changes with the seasons. Take a seat and head off on your next
+                        adventure.</p>
 
                 </div>
             </div>
@@ -132,7 +203,10 @@
             <div class="choose-content-second">
                 <img class="icon-img" src="Images/best-price.jpg" alt="">
                 <h3 class="choose-section-title">Best Price Guarantee</h3>
-                <p>The “Malmbanan” railway runs straight past Niehku, tracing the border between Sweden and Norway. This legendary train line between Kiruna and Narvik has been transporting iron ore for over a century. Niehku Mountain Villa is built on the site of the line’s old roundhouse, which operated from 1902 to 1923.</p>
+                <p>The “Malmbanan” railway runs straight past Niehku, tracing the border between Sweden and Norway. This
+                    legendary train line between Kiruna and Narvik has been transporting iron ore for over a century.
+                    Niehku Mountain Villa is built on the site of the line’s old roundhouse, which operated from 1902 to
+                    1923.</p>
             </div>
         </section>
         <!-- Choose Section Ends Here -->
@@ -145,7 +219,8 @@
 
                 <div class="newsletter-form">
                     <h3 class="newsletter-title">Newsletter</h3>
-                    <p class="newsletter-description">With the assistance from a helicopter we will take you to remote and seldom visited places. Sign up today!</p>
+                    <p class="newsletter-description">With the assistance from a helicopter we will take you to remote
+                        and seldom visited places. Sign up today!</p>
                     <input type="text" placeholder="Enter your name"> <br>
                     <input type="email" placeholder="Enter your email"> <br>
                     <button class="btn-primary btn-newsletter">Subscribe</button>
@@ -155,7 +230,7 @@
                     <div class="discount">
                         <p>World Travel.com</p>
                         <h3 class="">Save up to 70%</h3>
-                       </div>
+                    </div>
                 </div>
 
             </div>
@@ -175,7 +250,8 @@
                     <img class="footer-img" src="Images/Travels-Logo.png" alt="Logo">
                     <h2>World <span class="travel">Travel</span></h2>
                 </div>
-                <p class="footer-description">Would you like to know more about us and what we can offer in form of adventures and experiences? Book a stay or reserve a table? Here you will find all the details.
+                <p class="footer-description">Would you like to know more about us and what we can offer in form of
+                    adventures and experiences? Book a stay or reserve a table? Here you will find all the details.
                 </p>
                 <div class="footer-icons">
                     <span><i class="fa-brands fa-twitter"></i></span>
