Country Name Position Fixed

--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
         <!-- Popular Tours Section ends Here -->
 
         <!-- Destination Section Starts Here -->
-
         <section class="destination-section">
             <div class="destination-text-content">
                 <h2 class="section-title">Choose Your Destination</h2>
@@ -103,17 +102,24 @@
             </div>
             <div class="destination-img-container-1">
                 <img class="img-1" src="Images/Rectangle 5.png" alt="">
+                <h3 class="country-1">Maldives</h3>
                 <img class="img-2" src="Images/Rectangle 8.png" alt="">
+                <h3 class="country-2">Indonesia</h3>
             </div>
 
             <div class="destination-img-container-2">
                 <img class="img-3" src="Images/Rectangle 6.png" alt="">
+                <h3 class="country-3">Srilanka</h3>
                 <img class="img-4" src="Images/Rectangle 7.png" alt="">
+                <h3 class="country-4">North America</h3>
                 <img class="img-5" src="Images/Rectangle 9.png" alt="">
+                <h3 class="country-5">Kashmir</h3>
             </div>
             <div class="destination-img-container-3">
                 <img class="img-6" src="Images/Rectangle 11.png" alt="">
+                <h3 class="country-6">Bangladesh</h3>
                 <img class="img-7" src="Images/Rectangle 10.png" alt="">
+                <h3 class="country-7">Bandarban</h3>
             </div>
 
         </section>
@@ -132,7 +138,7 @@
                 <div class="hotel-content-one">
                     <img class="hotel-img" src="Images/card-1.jpg" alt="">
                     <h3 class="hotel-room-title">
-                        H11 Aparthotel 
+                        H11 Aparthotel
                     </h3>
                     <p>Set in the centre of Kraków, H11 Aparthotel is a accommodation, which offers
                         soundproof rooms. </p>
@@ -154,23 +160,6 @@
             </div>
         </section>
         <!-- Hotel Service Section ends here -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
         <!-- Choose Section Starts Here -->
